--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,6 @@ services:
         target: /home/app/sistema_teste/config/master.key
     ports:
       - "8001:80"
-secrets:
-  master_key:
-    file: ./config/master.key
+# secrets:
+#   master_key:
+#     file: ./config/master.key
